<resources>
    <string name="app_name">Open Weather</string>
    <string name="title_activity_home">Open Weather</string>
    <string name="facebook_app_id">491796907821396</string>
    <string name="fb_login_protocol_scheme">fb2032856113602011</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="provided_by_open_weather">Provided by open weather</string>
    <string name="current_weather">Current Weather</string>
    <string name="next_five_days">Next 5 days</string>
    <string name="location_services_are_off">Location services are turned off</string>
    <string name="error_location_is_off">Location is turned off</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="location_permission_denied">You denied location please enable it for the app to work</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fetching_location_please_wait">Fetching your current location</string>
    <string name="fahrenheit">°F</string>
    <string name="wind_title">Wind:</string>
    <string name="sunrise_title">Sunrise:</string>
    <string name="sunset_title">Sunset:</string>
    <string name="general_error">Sorry an error has happened please try again later</string>
    <string name="no_internet_message">There\'s no internet connection</string>
    <string name="there_is_no_data_to_display">There\'s no data to display!</string>
    <string name="humidity_title">Humidity:</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="skip">Skip</string>
    <string name="action_logout">Log out</string>
</resources>
