<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kbm.openweather.ui.currentweather.CurrentWeatherFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginBottom="@dimen/margin5"
            android:layout_marginEnd="@dimen/current_weather_card_horizontal_margin"
            android:layout_marginStart="@dimen/current_weather_card_horizontal_margin"
            android:layout_marginTop="@dimen/current_weather_card_top_margin"
            android:elevation="2dp">

            <LinearLayout
                android:id="@+id/lnr_current_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/current_weather_card_padding">

                <TextView
                    style="@style/cardTitleTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_weather" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_current_degree"
                        style="@style/CurrentDegreeTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="@dimen/margin5"
                        android:text="233" />

                    <TextView
                        android:id="@+id/txt_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/txt_current_degree"
                        android:layout_gravity="bottom"
                        android:layout_margin="@dimen/margin5"
                        android:text="@string/fahrenheit"
                        android:textSize="@dimen/unitTextSize" />

                    <TextView
                        android:id="@+id/txt_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_gravity="bottom"
                        android:layout_margin="@dimen/margin5"
                        android:textSize="@dimen/countryTextSize" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lnr_main_weather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_icon"
                        android:layout_width="@dimen/current_weather_icon_width"
                        android:layout_height="@dimen/current_weather_icon_height"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/margin5"
                        android:scaleType="fitXY"
                        ></ImageView>

                    <TextView
                        android:id="@+id/txt_main_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/img_icon"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/margin5"
                        android:layout_toEndOf="@+id/img_icon" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lnr_wind"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/margin5"
                        android:gravity="top"
                        android:text="@string/wind_title" />

                    <TextView

                        android:id="@+id/txt_wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/margin5" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lnr_sunrise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/margin5"
                        android:gravity="top"
                        android:text="@string/sunrise_title" />

                    <TextView

                        android:id="@+id/txt_sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/margin5" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lnr_sunset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/margin5"
                        android:gravity="top"
                        android:text="@string/sunset_title" />

                    <TextView

                        android:id="@+id/txt_sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/margin5" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lnr_humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/margin5"
                        android:gravity="top"
                        android:text="@string/humidity_title" />

                    <TextView

                        android:id="@+id/txt_humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/margin5" />
                </LinearLayout>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/prgrs_current_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </android.support.v7.widget.CardView>
    </ScrollView>
</FrameLayout>
